Análise do faturamento por loja

--- a/AluraStore.ipynb
+++ b/AluraStore.ipynb
@@ -37,14 +37,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 327
         },
         "id": "T3EvaeQ_INIL",
-        "outputId": "3e7e349d-a2c1-4c38-b16b-f77fbcc1b913"
+        "outputId": "5655b64f-b60c-468d-833c-146f7e7f999a"
       },
       "outputs": [
         {
@@ -74,7 +74,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-803af924-4b89-42c6-8b11-59b4f988fbcc\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-2224a36f-9717-4f6a-8f22-6347a18d1b4b\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -189,7 +189,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-803af924-4b89-42c6-8b11-59b4f988fbcc')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2224a36f-9717-4f6a-8f22-6347a18d1b4b')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -241,12 +241,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-803af924-4b89-42c6-8b11-59b4f988fbcc button.colab-df-convert');\n",
+              "        document.querySelector('#df-2224a36f-9717-4f6a-8f22-6347a18d1b4b button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-803af924-4b89-42c6-8b11-59b4f988fbcc');\n",
+              "        const element = document.querySelector('#df-2224a36f-9717-4f6a-8f22-6347a18d1b4b');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -266,8 +266,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-19d49f20-7e19-429e-a2bd-b1e7af531f07\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-19d49f20-7e19-429e-a2bd-b1e7af531f07')\"\n",
+              "    <div id=\"df-4ab09ee2-e0fd-4fd6-a62b-740ac05e7f6e\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-4ab09ee2-e0fd-4fd6-a62b-740ac05e7f6e')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -386,7 +386,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-19d49f20-7e19-429e-a2bd-b1e7af531f07 button');\n",
+              "            document.querySelector('#df-4ab09ee2-e0fd-4fd6-a62b-740ac05e7f6e button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -403,7 +403,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 1
+          "execution_count": 3
         }
       ],
       "source": [
@@ -433,21 +433,33 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "lojas_dfs = {'Loja 1': loja,'Loja 2': loja2,'Loja 3': loja3}\n",
+        "\n",
+        "for nome_da_loja, df_da_loja in lojas_dfs.items():\n",
+        "  faturamento = df_da_loja['Preço'].sum()\n",
+        "  print(f'Faturamento {nome_da_loja}: R$ {faturamento:.2f}')"
+      ],
       "metadata": {
-        "id": "xykobSftV64I"
+        "id": "xykobSftV64I",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "collapsed": true,
+        "outputId": "b4a2af13-09bd-431f-8387-db359e646520"
       },
-      "execution_count": 1,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "KDyr8E71V3m-"
-      },
-      "execution_count": 1,
-      "outputs": []
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Faturamento Loja 1: R$ 1534509.12\n",
+            "Faturamento Loja 2: R$ 1488459.06\n",
+            "Faturamento Loja 3: R$ 1464025.03\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
