Análise vendas por categoria

--- a/AluraStore.ipynb
+++ b/AluraStore.ipynb
@@ -472,21 +472,65 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "for nome_da_loja, df_da_loja in lojas_dfs.items():\n",
+        "  print(f'{nome_da_loja} ')\n",
+        "  print('--=--' *20)\n",
+        "  vendas_por_categoria = df_da_loja.groupby('Categoria do Produto')['Preço'].sum()\n",
+        "  print(vendas_por_categoria)\n"
+      ],
       "metadata": {
-        "id": "A34YupIuYhfF"
+        "id": "A34YupIuYhfF",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ddb14c6a-09c9-45f6-bef8-f45b98eeed87"
       },
-      "execution_count": 1,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "yZR6cOjXYSk1"
-      },
-      "execution_count": 1,
-      "outputs": []
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Loja 1 \n",
+            "--=----=----=----=----=----=----=----=----=----=----=----=----=----=----=----=----=----=----=----=--\n",
+            "Categoria do Produto\n",
+            "brinquedos                23993.78\n",
+            "eletrodomesticos         484913.36\n",
+            "eletronicos              572659.23\n",
+            "esporte e lazer           52387.55\n",
+            "instrumentos musicais    121731.69\n",
+            "livros                    11713.92\n",
+            "moveis                   250178.11\n",
+            "utilidades domesticas     16931.48\n",
+            "Name: Preço, dtype: float64\n",
+            "Loja 2 \n",
+            "--=----=----=----=----=----=----=----=----=----=----=----=----=----=----=----=----=----=----=----=--\n",
+            "Categoria do Produto\n",
+            "brinquedos                21262.21\n",
+            "eletrodomesticos         464758.13\n",
+            "eletronicos              547773.71\n",
+            "esporte e lazer           46326.09\n",
+            "instrumentos musicais    139987.03\n",
+            "livros                    13454.35\n",
+            "moveis                   235234.68\n",
+            "utilidades domesticas     19662.86\n",
+            "Name: Preço, dtype: float64\n",
+            "Loja 3 \n",
+            "--=----=----=----=----=----=----=----=----=----=----=----=----=----=----=----=----=----=----=----=--\n",
+            "Categoria do Produto\n",
+            "brinquedos                25869.20\n",
+            "eletrodomesticos         438984.89\n",
+            "eletronicos              547699.92\n",
+            "esporte e lazer           47456.10\n",
+            "instrumentos musicais    103174.45\n",
+            "livros                    12664.70\n",
+            "moveis                   268095.56\n",
+            "utilidades domesticas     20080.21\n",
+            "Name: Preço, dtype: float64\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
