análise da média de avaliação por loja

--- a/AluraStore.ipynb
+++ b/AluraStore.ipynb
@@ -37,14 +37,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 327
         },
         "id": "T3EvaeQ_INIL",
-        "outputId": "5655b64f-b60c-468d-833c-146f7e7f999a"
+        "outputId": "a5b7238e-03dd-41bc-d5ff-1eb414b43e5c"
       },
       "outputs": [
         {
@@ -74,7 +74,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-2224a36f-9717-4f6a-8f22-6347a18d1b4b\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-e18fd3db-f102-44c7-8ffe-7149464de27b\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -189,7 +189,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2224a36f-9717-4f6a-8f22-6347a18d1b4b')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e18fd3db-f102-44c7-8ffe-7149464de27b')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -241,12 +241,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-2224a36f-9717-4f6a-8f22-6347a18d1b4b button.colab-df-convert');\n",
+              "        document.querySelector('#df-e18fd3db-f102-44c7-8ffe-7149464de27b button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-2224a36f-9717-4f6a-8f22-6347a18d1b4b');\n",
+              "        const element = document.querySelector('#df-e18fd3db-f102-44c7-8ffe-7149464de27b');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -266,8 +266,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-4ab09ee2-e0fd-4fd6-a62b-740ac05e7f6e\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-4ab09ee2-e0fd-4fd6-a62b-740ac05e7f6e')\"\n",
+              "    <div id=\"df-fdfd8c48-f9bf-404a-a9d1-765104587b42\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-fdfd8c48-f9bf-404a-a9d1-765104587b42')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -386,7 +386,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-4ab09ee2-e0fd-4fd6-a62b-740ac05e7f6e button');\n",
+              "            document.querySelector('#df-fdfd8c48-f9bf-404a-a9d1-765104587b42 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -403,7 +403,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 11
         }
       ],
       "source": [
@@ -446,9 +446,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "collapsed": true,
-        "outputId": "b4a2af13-09bd-431f-8387-db359e646520"
+        "outputId": "6a1737db-9c7f-4a06-969f-798d51e38f6e"
       },
-      "execution_count": 24,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -473,9 +473,11 @@
     {
       "cell_type": "code",
       "source": [
+        "lojas_dfs = {'Loja 1': loja,'Loja 2': loja2,'Loja 3': loja3}\n",
+        "\n",
         "for nome_da_loja, df_da_loja in lojas_dfs.items():\n",
-        "  print(f'{nome_da_loja} ')\n",
         "  print('--=--' *20)\n",
+        "  print(f'{nome_da_loja} ')\n",
         "  vendas_por_categoria = df_da_loja.groupby('Categoria do Produto')['Preço'].sum()\n",
         "  print(vendas_por_categoria)\n"
       ],
@@ -484,16 +486,16 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ddb14c6a-09c9-45f6-bef8-f45b98eeed87"
+        "outputId": "11220c02-cd83-4727-b1a0-ab3b5fab7351"
       },
-      "execution_count": 53,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Loja 1 \n",
             "--=----=----=----=----=----=----=----=----=----=----=----=----=----=----=----=----=----=----=----=--\n",
+            "Loja 1 \n",
             "Categoria do Produto\n",
             "brinquedos                23993.78\n",
             "eletrodomesticos         484913.36\n",
@@ -504,8 +506,8 @@
             "moveis                   250178.11\n",
             "utilidades domesticas     16931.48\n",
             "Name: Preço, dtype: float64\n",
-            "Loja 2 \n",
             "--=----=----=----=----=----=----=----=----=----=----=----=----=----=----=----=----=----=----=----=--\n",
+            "Loja 2 \n",
             "Categoria do Produto\n",
             "brinquedos                21262.21\n",
             "eletrodomesticos         464758.13\n",
@@ -516,8 +518,8 @@
             "moveis                   235234.68\n",
             "utilidades domesticas     19662.86\n",
             "Name: Preço, dtype: float64\n",
-            "Loja 3 \n",
             "--=----=----=----=----=----=----=----=----=----=----=----=----=----=----=----=----=----=----=----=--\n",
+            "Loja 3 \n",
             "Categoria do Produto\n",
             "brinquedos                25869.20\n",
             "eletrodomesticos         438984.89\n",
@@ -543,12 +545,33 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "print(\"--- Média de Avaliação por Loja ---\")\n",
+        "\n",
+        "for nome_da_loja, df_da_loja in lojas_dfs.items():\n",
+        "    media_avaliacoes = df_da_loja['Avaliação da compra'].mean()\n",
+        "    print(f\"Média de avaliação da {nome_da_loja}: {media_avaliacoes:.1f} estrelas\")"
+      ],
       "metadata": {
-        "id": "bh3jjjJwY5MU"
+        "id": "bh3jjjJwY5MU",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "25c69690-25fe-4d71-902c-207639d8115c"
       },
-      "execution_count": 1,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--- Média de Avaliação por Loja ---\n",
+            "Média de avaliação da Loja 1: 4.0 estrelas\n",
+            "Média de avaliação da Loja 2: 4.0 estrelas\n",
+            "Média de avaliação da Loja 3: 4.0 estrelas\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -556,7 +579,7 @@
       "metadata": {
         "id": "I0KkjPoTY88F"
       },
-      "execution_count": 1,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -574,7 +597,7 @@
       "metadata": {
         "id": "qoyjqijQZHfF"
       },
-      "execution_count": 1,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -583,7 +606,7 @@
       "metadata": {
         "id": "0Sw3sd4IZIGW"
       },
-      "execution_count": 1,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -601,7 +624,7 @@
       "metadata": {
         "id": "S2JeaCykZNy9"
       },
-      "execution_count": 1,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -610,7 +633,7 @@
       "metadata": {
         "id": "0tSdCie9ZQlt"
       },
-      "execution_count": 1,
+      "execution_count": 13,
       "outputs": []
     }
   ]
