Análise de vendas

--- a/AluraStore.ipynb
+++ b/AluraStore.ipynb
@@ -574,15 +574,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "I0KkjPoTY88F"
-      },
-      "execution_count": 13,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "# 4. Produtos Mais e Menos Vendidos"
@@ -593,12 +584,53 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "print(\"--- Análise de Produtos Mais e Menos Vendidos ---\")\n",
+        "\n",
+        "for nome_da_loja, df_da_loja in lojas_dfs.items():\n",
+        "    print('--=--'*20)\n",
+        "    print(f\"ANÁLISE DA LOJA: {nome_da_loja}\")\n",
+        "\n",
+        "    vendas_por_produto = df_da_loja['Produto'].value_counts()\n",
+        "    produto_mais_vendido = vendas_por_produto.idxmax()\n",
+        "    produto_menos_vendido = vendas_por_produto.idxmin()\n",
+        "\n",
+        "    qtd_mais_vendido = vendas_por_produto.max()\n",
+        "    qtd_menos_vendido = vendas_por_produto.min()\n",
+        "\n",
+        "    print(f\"Produto MAIS vendido: '{produto_mais_vendido}' (vendido {qtd_mais_vendido} vezes).\")\n",
+        "    print(f\"Produto MENOS vendido: '{produto_menos_vendido}' (vendido {qtd_menos_vendido} vezes).\")\n",
+        "\n"
+      ],
       "metadata": {
-        "id": "qoyjqijQZHfF"
+        "id": "qoyjqijQZHfF",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "dd18126d-61be-405e-9979-719ed82275f6"
       },
-      "execution_count": 13,
-      "outputs": []
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--- Análise de Produtos Mais e Menos Vendidos ---\n",
+            "--=----=----=----=----=----=----=----=----=----=----=----=----=----=----=----=----=----=----=----=--\n",
+            "ANÁLISE DA LOJA: Loja 1\n",
+            "Produto MAIS vendido: 'Micro-ondas' (vendido 60 vezes).\n",
+            "Produto MENOS vendido: 'Headset' (vendido 33 vez(es)).\n",
+            "--=----=----=----=----=----=----=----=----=----=----=----=----=----=----=----=----=----=----=----=--\n",
+            "ANÁLISE DA LOJA: Loja 2\n",
+            "Produto MAIS vendido: 'Iniciando em programação' (vendido 65 vezes).\n",
+            "Produto MENOS vendido: 'Jogo de tabuleiro' (vendido 32 vez(es)).\n",
+            "--=----=----=----=----=----=----=----=----=----=----=----=----=----=----=----=----=----=----=----=--\n",
+            "ANÁLISE DA LOJA: Loja 3\n",
+            "Produto MAIS vendido: 'Kit banquetas' (vendido 57 vezes).\n",
+            "Produto MENOS vendido: 'Blocos de montar' (vendido 35 vez(es)).\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
