--- a/AluraStore.ipynb
+++ b/AluraStore.ipynb
@@ -652,12 +652,30 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "for nome_da_loja, df_da_loja in lojas_dfs.items():\n",
+        "    media_frete = df_da_loja['Frete'].mean()\n",
+        "    print(f\"Custo médio de frete da {nome_da_loja}: R$ {media_frete:.2f}\")\n"
+      ],
       "metadata": {
-        "id": "S2JeaCykZNy9"
+        "id": "S2JeaCykZNy9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "066c34f8-42a1-4636-d17f-caa28b8cb77c"
       },
-      "execution_count": 13,
-      "outputs": []
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Custo médio de frete da Loja 1: R$ 34.69\n",
+            "Custo médio de frete da Loja 2: R$ 33.62\n",
+            "Custo médio de frete da Loja 3: R$ 33.07\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
